--- a/style.css
+++ b/style.css
@@ -1,41 +1,43 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+body{
+    font-family: Arial, sans-serif;
+    background-color: hsl(0, 0%, 95%);
 }
 
-body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background-color: #333;
-    font-family: sans-serif;
-    color: #fff;
+h1{
+    color: hsl(223, 100%, 64%);
 }
 
-#game-container {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    height: 80vh;
+form{
+    background-color: hsl(0, 0%, 100%);
+    text-align: center;
+    max-width: 350px;
+    margin: auto;
+    padding: 25px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 15px;
 }
 
-#gameCanvas {
-    background-color: #111;
-    width: 90vmin;
-    height: 90vmin;
-    max-width: 500px;
-    max-height: 500px;
+#textBox{
+    width: 50%;
+    text-align: center;
+    font-size: 2em;
+    border: 2px solid hsla(0, 0%, 0%, 0.8);
+    border-radius: 6px;
 }
 
-#score-container {
-    display: flex;
-    justify-content: space-between;
-    width: 90%;
-    max-width: 500px;
-    margin-top: 10px;
+button{
+    margin-top: 15px;
+    background-color: hsl(223, 100%, 91%);
+    font-size: 1.5em;
+    padding: 10px, 15px;
+    border-radius: 5px;
+}
+
+button:hover{
+    background-color: hsl(223, 100%, 73%);
+}
+
+#result{
+    font-size: 1.75em;
+    font-weight: bold;
 }
